fix: enhance animations and layout adjustments across components: main one being homepage latest blog orientation change for improved user experience, decreased font size for project card title and increased gap between elements.

--- a/app/globals.css
+++ b/app/globals.css
@@ -19,7 +19,9 @@
         "Liberation Mono", "Courier New", monospace;
     /* ... */
 }
-
+.home-page-blog-title, .animated-text {
+    will-change: transform, opacity, filter;
+}
 @theme inline {
     --font-heading: var(--font-sans);
     --font-sans: var(--font-sans);
